metadata/force-app/main/default/objects/CustomName_GLRTC__c/CustomName_GLRTC__c.object-meta.xml
<CustomObject>
    <description>Description_kZdjB</description>
    <label>CustomLabel_zWFaW</label>
    <nameField>
        <label>CustomLabel_zWFaW</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_zWFaWs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>