metadata/force-app/main/default/objects/CustomName_GLRTC__c/fields/CustomField_GrdBg__c.field-meta.xml
<CustomField>
    <fullName>CustomField_GrdBg__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldMRhui</label>
    <length>255</length>
    <type>Text</type>
</CustomField>