metadata/force-app/main/default/objects/CustomName_GLRTC__c/fields/CustomField_LEiDa__c.field-meta.xml
<CustomField>
    <fullName>CustomField_LEiDa__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldLkhIb</label>
    <length>255</length>
    <type>Text</type>
</CustomField>